# hkstock-quant

./: .env.example  README.md  init_project.py  init_uv.py  pyproject.toml  requirements.txt  run_dashboard.py
data/raw/: 0388.HK_1d_2022-01-01_2023-01-01.csv  0700.HK_1d_2022-01-01_2023-01-01.csv  9988.HK_1d_2022-01-01_2023-01-01.csv
examples/: backtest_example.py  live_trading_example.py  run_backtest_with_ui.py
logs/: backtest_MovingAverageStrategy_20250415_174734.json
logs/visualizations/: dashboard.html  optimized_dashboard.html
notebooks/: getting_started.ipynb
src/backtest/: engine.py
src/config/: config.py  futu_config.yaml
src/data/: data_fetcher.py
src/strategies/: base_strategy.py  moving_average.py
src/trading/: base_trader.py  futu_trader.py
src/utils/: logger.py
src/visualization/: visualizer.py  web_dashboard.py
